@@ -3,100 +3,97 @@ package me.jellysquid.mods.sodium.client.gui;
 import com.google.gson.FieldNamingPolicy;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import com.google.gson.annotations.SerializedName;
 import com.google.gson.JsonSyntaxException;
 import me.jellysquid.mods.sodium.client.SodiumClientMod;
-import me.jellysquid.mods.sodium.client.gui.options.FormattedTextProvider;
 import me.jellysquid.mods.sodium.client.gui.options.TextProvider;
-import net.minecraft.client.option.GraphicsMode;
-import net.minecraft.text.Text;
-import net.minecraft.text.TranslatableText;
+import net.minecraft.client.GraphicsStatus;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TranslatableComponent;
+import org.embeddedt.embeddium.config.ConfigMigrator;
 
 import java.io.FileReader;
 import java.io.IOException;
 import java.lang.reflect.Modifier;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
+
+import static me.jellysquid.mods.sodium.client.SodiumClientMod.MODID;
 
 public class SodiumGameOptions {
+    private static final String DEFAULT_FILE_NAME = MODID + "-options.json";
+
     public final QualitySettings quality = new QualitySettings();
     public final AdvancedSettings advanced = new AdvancedSettings();
     public final PerformanceSettings performance = new PerformanceSettings();
     public final NotificationSettings notifications = new NotificationSettings();
 
+    private boolean readOnly;
+
     private Path configPath;
 
-    public static class AdvancedSettings {
-        public boolean useVertexArrayObjects = true;
-        public boolean useChunkMultidraw = true;
+    public static SodiumGameOptions defaults() {
+        var options = new SodiumGameOptions();
+        options.configPath = getConfigPath(DEFAULT_FILE_NAME);
 
-        public boolean animateOnlyVisibleTextures = true;
-        public boolean useEntityCulling = true;
-        public boolean useParticleCulling = true;
-        public boolean useFogOcclusion = true;
-        public boolean useCompactVertexFormat = true;
-        public boolean useBlockFaceCulling = true;
-        public boolean allowDirectMemoryAccess = true;
-        public boolean ignoreDriverBlacklist = false;
-        public boolean translucencySorting = false;
-        public boolean disableIncompatibleModWarnings = false;
+        return options;
     }
 
     public static class PerformanceSettings {
         public int chunkBuilderThreads = 0;
-        public boolean alwaysDeferChunkUpdates = false;
+        @SerializedName("always_defer_chunk_updates_v2") // this will reset the option in older configs
+        public boolean alwaysDeferChunkUpdates = true;
+
+        public boolean animateOnlyVisibleTextures = true;
+        public boolean useEntityCulling = true;
+        public boolean useFogOcclusion = true;
+        public boolean useBlockFaceCulling = true;
+        public boolean useCompactVertexFormat = true;
+        @SerializedName("use_translucent_face_sorting_v2")
+        public boolean useTranslucentFaceSorting = true;
+    }
+
+    public static class AdvancedSettings {
+        public boolean enableMemoryTracing = false;
+        public boolean useAdvancedStagingBuffers = true;
+        public boolean disableIncompatibleModWarnings = false;
+
+        public int cpuRenderAheadLimit = 3;
     }
 
     public static class QualitySettings {
-        public GraphicsQuality cloudQuality = GraphicsQuality.DEFAULT;
         public GraphicsQuality weatherQuality = GraphicsQuality.DEFAULT;
         public GraphicsQuality leavesQuality = GraphicsQuality.DEFAULT;
 
         public boolean enableVignette = true;
-        public boolean enableClouds = true;
-
-        public LightingQuality smoothLighting = LightingQuality.HIGH;
     }
 
     public static class NotificationSettings {
-        public boolean hideDonationButton = false;
+        public boolean forceDisableDonationPrompts = false;
+
+        public boolean hasClearedDonationButton = false;
+        public boolean hasSeenDonationPrompt = false;
     }
 
-    public enum GraphicsQuality implements FormattedTextProvider {
-        DEFAULT(new TranslatableText("generator.default")),
-        FANCY(new TranslatableText("options.clouds.fancy")),
-        FAST(new TranslatableText("options.clouds.fast"));
+    public enum GraphicsQuality implements TextProvider {
+        DEFAULT("options.gamma.default"),
+        FANCY("options.clouds.fancy"),
+        FAST("options.clouds.fast");
 
-        private final Text name;
+        private final Component name;
 
-        GraphicsQuality(Text name) {
-            this.name = name;
+        GraphicsQuality(String name) {
+            this.name = new TranslatableComponent(name);
         }
 
         @Override
-        public Text getLocalizedName() {
+        public Component getLocalizedName() {
             return this.name;
         }
 
-        public boolean isFancy(GraphicsMode graphicsMode) {
-            return (this == FANCY) || (this == DEFAULT && (graphicsMode == GraphicsMode.FANCY || graphicsMode == GraphicsMode.FABULOUS));
-        }
-    }
-
-    public enum LightingQuality implements FormattedTextProvider {
-        HIGH(new TranslatableText("options.ao.max")),
-        LOW(new TranslatableText("options.ao.min")),
-        OFF(new TranslatableText("options.ao.off"));
-
-        private final Text name;
-
-        LightingQuality(Text name) {
-            this.name = name;
-        }
-
-        @Override
-        public Text getLocalizedName() {
-            return this.name;
+        public boolean isFancy(GraphicsStatus graphicsMode) {
+            return (this == FANCY) || (this == DEFAULT && (graphicsMode == GraphicsStatus.FANCY || graphicsMode == GraphicsStatus.FABULOUS));
         }
     }
 
@@ -106,7 +103,12 @@ public class SodiumGameOptions {
             .excludeFieldsWithModifiers(Modifier.PRIVATE)
             .create();
 
-    public static SodiumGameOptions load(Path path) {
+    public static SodiumGameOptions load() {
+        return load(DEFAULT_FILE_NAME);
+    }
+
+    public static SodiumGameOptions load(String name) {
+        Path path = getConfigPath(name);
         SodiumGameOptions config;
         boolean resaveConfig = true;
 
@@ -126,6 +128,9 @@ public class SodiumGameOptions {
 
         config.configPath = path;
 
+        // TODO Embeddium: Remove the field completely in 0.4
+        config.notifications.forceDisableDonationPrompts = false;
+
         try {
             if(resaveConfig)
                 config.writeChanges();
@@ -136,8 +141,21 @@ public class SodiumGameOptions {
         return config;
     }
 
+    private static Path getConfigPath(String name) {
+        return ConfigMigrator.handleConfigMigration(name);
+    }
+
+    @Deprecated
     public void writeChanges() throws IOException {
-        Path dir = this.configPath.getParent();
+        writeToDisk(this);
+    }
+
+    public static void writeToDisk(SodiumGameOptions config) throws IOException {
+        if (config.isReadOnly()) {
+            throw new IllegalStateException("Config file is read-only");
+        }
+
+        Path dir = config.configPath.getParent();
 
         if (!Files.exists(dir)) {
             Files.createDirectories(dir);
@@ -145,7 +163,25 @@ public class SodiumGameOptions {
             throw new IOException("Not a directory: " + dir);
         }
 
-        Files.write(this.configPath, GSON.toJson(this)
-                .getBytes(StandardCharsets.UTF_8));
+        // Use a temporary location next to the config's final destination
+        Path tempPath = config.configPath.resolveSibling(config.configPath.getFileName() + ".tmp");
+
+        // Write the file to our temporary location
+        Files.writeString(tempPath, GSON.toJson(config));
+
+        // Atomically replace the old config file (if it exists) with the temporary file
+        Files.move(tempPath, config.configPath, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING);
+    }
+
+    public boolean isReadOnly() {
+        return this.readOnly;
+    }
+
+    public void setReadOnly() {
+        this.readOnly = true;
+    }
+
+    public String getFileName() {
+        return this.configPath.getFileName().toString();
     }
 }
